[gd_scene load_steps=34 format=3 uid="uid://cg154e3cwcjlr"]

[ext_resource type="Texture2D" uid="uid://2cryhpbyyx5l" path="res://sprites/gusanodeprevado-Sheet.png" id="1_ojo15"]
[ext_resource type="Script" path="res://scripts/nabo.gd" id="1_xx4vo"]
[ext_resource type="Texture2D" uid="uid://dopp2yjurp0rc" path="res://sprites/Sprite-0001-Sheet.png" id="2_g3i0m"]
[ext_resource type="Texture2D" uid="uid://codixfa7h6yrn" path="res://sprites/bicho-Sheet.png" id="3_kfh4b"]
[ext_resource type="Texture2D" uid="uid://o7krashpq30x" path="res://sprites/nabo_pequeno_como_el_de_tato-Sheet.png" id="4_wi1s4"]
[ext_resource type="Texture2D" uid="uid://4bgodo4d3j2s" path="res://sprites/globo.png" id="6_fqje7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j253i"]
size = Vector2(108, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_546k2"]
atlas = ExtResource("1_ojo15")
region = Rect2(0, 0, 70, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_qi58o"]
atlas = ExtResource("1_ojo15")
region = Rect2(70, 0, 70, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_si88d"]
atlas = ExtResource("1_ojo15")
region = Rect2(140, 0, 70, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldh71"]
atlas = ExtResource("1_ojo15")
region = Rect2(210, 0, 70, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_xejnu"]
atlas = ExtResource("2_g3i0m")
region = Rect2(0, 0, 70, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgh6x"]
atlas = ExtResource("2_g3i0m")
region = Rect2(70, 0, 70, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_ae62c"]
atlas = ExtResource("2_g3i0m")
region = Rect2(140, 0, 70, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrvju"]
atlas = ExtResource("2_g3i0m")
region = Rect2(210, 0, 70, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_myp5a"]
atlas = ExtResource("3_kfh4b")
region = Rect2(0, 0, 70, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_pv7pr"]
atlas = ExtResource("3_kfh4b")
region = Rect2(70, 0, 70, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwvdh"]
atlas = ExtResource("3_kfh4b")
region = Rect2(140, 0, 70, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_wr0p8"]
atlas = ExtResource("3_kfh4b")
region = Rect2(210, 0, 70, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vfds"]
atlas = ExtResource("3_kfh4b")
region = Rect2(280, 0, 70, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hcnc"]
atlas = ExtResource("3_kfh4b")
region = Rect2(350, 0, 70, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_eciy4"]
atlas = ExtResource("3_kfh4b")
region = Rect2(420, 0, 70, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_irwi4"]
atlas = ExtResource("3_kfh4b")
region = Rect2(490, 0, 70, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvsf4"]
atlas = ExtResource("4_wi1s4")
region = Rect2(0, 0, 70, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_vk2oo"]
atlas = ExtResource("4_wi1s4")
region = Rect2(70, 0, 70, 70)

[sub_resource type="SpriteFrames" id="SpriteFrames_cbqy3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_546k2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qi58o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_si88d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldh71")
}],
"loop": true,
"name": &"eyebig",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xejnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgh6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ae62c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrvju")
}],
"loop": true,
"name": &"eyesmall",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_myp5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pv7pr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwvdh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wr0p8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vfds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hcnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eciy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irwi4")
}],
"loop": true,
"name": &"talkbig",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvsf4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vk2oo")
}],
"loop": true,
"name": &"talksmall",
"speed": 8.0
}]

[sub_resource type="Animation" id="Animation_45grp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RichTextLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4yhak"]
resource_name = "fadein"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RichTextLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_xnbuk"]
resource_name = "fadeout"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RichTextLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k31dk"]
_data = {
"RESET": SubResource("Animation_45grp"),
"fadein": SubResource("Animation_4yhak"),
"fadeout": SubResource("Animation_xnbuk")
}

[sub_resource type="Animation" id="Animation_xe83o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_48rox"]
resource_name = "text"
length = 12.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.16667, 1.7, 2.86667, 3.43333, 6.1, 6.6, 8.3, 8.66667, 10.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.122, 0.122, 0.26913, 0.269, 0.604949, 0.605, 0.914923, 0.915, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_74cua"]
_data = {
"RESET": SubResource("Animation_xe83o"),
"text": SubResource("Animation_48rox")
}

[node name="Nabo" type="Area2D"]
position = Vector2(998, 149)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_xx4vo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-24, -14.5)
shape = SubResource("RectangleShape2D_j253i")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 0)
sprite_frames = SubResource("SpriteFrames_cbqy3")
animation = &"talksmall"
autoplay = "eyesmall"
flip_h = true

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -40.0
offset_top = -179.0
offset_right = 190.0
offset_bottom = 51.0
texture = ExtResource("6_fqje7")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 14.0
offset_top = -99.0
offset_right = 141.0
offset_bottom = -39.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 9
text = "ERMMM. HEY! WHAT'S THAT YOU'VE GOT THERE? OH! IS THIS IT? THE LEGENDARY, UNMATCHED, INCREDIBLE. . ."
fit_content = true
visible_characters = 0
visible_ratio = 0.0

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
offset_left = 14.0
offset_top = -99.0
offset_right = 141.0
offset_bottom = -39.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 9
text = "UM. MAGNIFYING GLASS-INATOR! YEAH! BUT IT'S USELESS AS OF NOW, HEH. HERE, YOU WILL NEED THIS."
fit_content = true

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
offset_left = 14.0
offset_top = -99.0
offset_right = 141.0
offset_bottom = -39.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 9
text = "THATS THE MAKE-A-BIG GEM! WONDER WHAT IT DOES? WELL, POINT AT ME WITH IT! (USE THE MOUSE)"
fit_content = true

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
offset_left = 14.0
offset_top = -99.0
offset_right = 141.0
offset_bottom = -39.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 9
text = "SEE? I BE BIG NOW! I'M GONNA RULE THE WORLD! MWAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAH. . ."
fit_content = true

[node name="RichTextLabel5" type="RichTextLabel" parent="."]
offset_left = 14.0
offset_top = -99.0
offset_right = 141.0
offset_bottom = -39.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 9
text = "NOW YOU'RE TRAPPED WITH ME! MWEHEHEHEHEHEHEH (USE THE MAGNIFYING GLASS TO GET OUT, AHEM)"
fit_content = true

[node name="TalkingTime" type="Timer" parent="."]
wait_time = 5.25
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k31dk")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_74cua")
}
speed_scale = 2.0

[node name="SoundTime" type="Timer" parent="."]
wait_time = 0.08
one_shot = true

[node name="AnimationTime" type="Timer" parent="."]
wait_time = 0.1

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="TalkingTime" to="." method="_on_talking_time_timeout"]
[connection signal="timeout" from="SoundTime" to="." method="_on_sound_time_timeout"]
[connection signal="timeout" from="AnimationTime" to="." method="_on_animation_time_timeout"]
